retrieveUnpackaged/objects/Candidate_Application__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Hoc_1_Address__c</fullName>
        <label>Ad-Hoc 1 Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_1_Email__c</fullName>
        <label>Ad-Hoc 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_1_Name__c</fullName>
        <label>Ad-Hoc 1 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_1_Phone__c</fullName>
        <label>Ad-Hoc 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_1_Specialty__c</fullName>
        <label>Ad-Hoc 1 Specialty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_1_Status__c</fullName>
        <label>Ad-Hoc 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ad_Hoc_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Hoc_1_Title__c</fullName>
        <label>Ad-Hoc 1 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Address__c</fullName>
        <label>Ad-Hoc 2 Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Email__c</fullName>
        <label>Ad-Hoc 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Name__c</fullName>
        <label>Ad-Hoc 2 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Phone__c</fullName>
        <label>Ad-Hoc 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Specialty__c</fullName>
        <label>Ad-Hoc 2 Specialty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Status__c</fullName>
        <label>Ad-Hoc 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ad_Hoc_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2_Title__c</fullName>
        <label>Ad-Hoc 2 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-Hoc 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Ad-Hoc 2)</relationshipLabel>
        <relationshipName>Candidate_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Address__c</fullName>
        <label>Ad-Hoc 3 Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Email__c</fullName>
        <label>Ad-Hoc 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Name__c</fullName>
        <label>Ad-Hoc 3 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Phone__c</fullName>
        <label>Ad-Hoc 3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Specialty__c</fullName>
        <label>Ad-Hoc 3 Specialty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Status__c</fullName>
        <label>Ad-Hoc 3 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ad_Hoc_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3_Title__c</fullName>
        <label>Ad-Hoc 3 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-Hoc 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Ad-Hoc 3)</relationshipLabel>
        <relationshipName>Candidate_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-Hoc 4</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Ad-Hoc 4)</relationshipLabel>
        <relationshipName>Candidate_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Requestor)</relationshipLabel>
        <relationshipName>Candidate_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_GS_Level__c</fullName>
        <label>Current GS Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GS 13</fullName>
                </value>
                <value>
                    <fullName>GS 14</fullName>
                </value>
                <value>
                    <fullName>GS 15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Lab_Work_Location__c</fullName>
        <label>Current Lab Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National Health and Environmental Effects Research Lab</fullName>
                </value>
                <value>
                    <fullName>National Exposure Research Lab</fullName>
                </value>
                <value>
                    <fullName>National Risk Management Research Lab</fullName>
                </value>
                <value>
                    <fullName>National Center for Environmental Assessment</fullName>
                </value>
                <value>
                    <fullName>National Center for Computational Toxicology</fullName>
                </value>
                <value>
                    <fullName>National Center for Environmental Research</fullName>
                </value>
                <value>
                    <fullName>Immediate Office of the Assistant Administrator</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>National Homeland Security Research Center</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>National Research Programs</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Office of Administration and Research Support</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Office of Program Accountability and Resource Management</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Office of Science Information Management</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Office of Science Policy</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Office of the Science Adviser</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Region__c</fullName>
        <label>Current Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAS_Input_Date__c</fullName>
        <label>EAS Input Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Line_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Line Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intended_Track__c</fullName>
        <label>Intended Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Reject_Reason__c</fullName>
        <label>LOI Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate does not meet length of employment requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet education requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet experience requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet promotion prerequisite.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average performance review.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average peer review.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Rejection_Additional_Comments__c</fullName>
        <inlineHelpText>Please provide additional information when choosing the Rejection Reason &quot;Other&quot;.</inlineHelpText>
        <label>LOI Rejection Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOI_Status__c</fullName>
        <label>LOI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_C_O_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L/C/O Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Reject_Reason__c</fullName>
        <label>Package Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate does not meet length of employment requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet education requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet experience requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet promotion prerequisite.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average performance review.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average peer review.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Rejection_Additional_Comments__c</fullName>
        <label>Package Rejection Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package_Status__c</fullName>
        <label>Package Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panel_Member_1_Ad_Hoc__c</fullName>
        <label>Panel Member 1 (Ad-Hoc)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Member_2_Ad_Hoc__c</fullName>
        <label>Panel Member 2 (Ad-Hoc)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Recomendation__c</fullName>
        <label>Panel Recomendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramRegion_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program/Region Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Decision__c</fullName>
        <label>Promotion Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Line_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Line Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved By 1st Line Supervisor</fullName>
                </value>
                <value>
                    <fullName>Approved By 2nd Line Supervisor</fullName>
                </value>
                <value>
                    <fullName>LOI Approved</fullName>
                </value>
                <value>
                    <fullName>Awaiting L/C/O Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TQB_Chair_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TQB Chair Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TQB_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQB Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Coordinator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQB Coordinator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQB Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Peer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQB Peer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Candidate Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQBR-{00000000}</displayFormat>
        <label>Candidate Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Applications</pluralLabel>
    <recordTypes>
        <fullName>Candidate_Package</fullName>
        <active>true</active>
        <label>Candidate Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>Letter_of_Intent_LOI</fullName>
        <active>true</active>
        <label>Letter of Intent (LOI)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>